# ai-inference-platform

./: .env.example  .gitignore  Dockerfile  README.md  create_repo.py  docker-compose.yml  docker-start.bat  gunicorn.conf.py  pyproject.toml  requirements.txt  start.bat
ai_platform/: __init__.py  celery.py  settings.py  urls.py
api/: admin.py  ai_service.py  cache_protection.py  models.py  rate_limit.py  serializers.py  tasks.py  urls.py  views.py
api/migrations/: 0001_initial.py
frontend/: package-lock.json
frontend/src/api/: index.ts
frontend/src/config/: abilities.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/views/: Dashboard.vue  Layout.vue  Login.vue  Models.vue  Tasks.vue
k8s/: deployment.yaml
nginx/: nginx.conf
observability/: __init__.py  es_consumer.py
